Rewrite README in English with pipeline diagram and real output
Structure: one-line summary, academic-origin note (no apology), a
Mermaid flowchart of the five jobs naming the real files, an annotated
project-structure tree, prerequisites with exact versions and install
links, a copy-pasteable quickstart (every command already run against
a clean clone), per-job output copied from actual runs, and a
technical-decisions section covering the Spark/Scala version choice,
the no-cluster design, the JDK 17 flags, and the CSV path fix.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>